--- a/drivers/ieee802154/Kconfig
+++ b/drivers/ieee802154/Kconfig
@@ -44,3 +44,8 @@ config IEEE802154_CC2420
        tristate "CC2420 driver"
        depends on SPI
        depends on  IEEE802154_DRIVERS
+
+config IEEE802154_ADF7242
+       tristate "ADF7242 transceiver driver"
+       depends on IEEE802154_DRIVERS && MAC802154
+       depends on SPI
